compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_conflicting_options_bit_array.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:bits-bytes>> -> 1 }"
---
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:23
  │
1 │ case <<1>> { <<1:bits-bytes>> -> 1 }
  │                       ^^^^^ This is an extra type specifier

Hint: This segment already has the type bits.
See: https://tour.rakun.run/data-types/bit-arrays/
