compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_conflicting_options_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:int-bytes>> x"
---
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:17
  │
1 │ let x = <<1:int-bytes>> x
  │                 ^^^^^ This is an extra type specifier

Hint: This segment already has the type int.
See: https://tour.rakun.run/data-types/bit-arrays/
