compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_conflicting_signedness1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:signed-unsigned>> x"
---
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:20
  │
1 │ let x = <<1:signed-unsigned>> x
  │                    ^^^^^^^^ This is an extra signedness specifier

Hint: This segment already has a signedness of signed.
See: https://tour.rakun.run/data-types/bit-arrays/
