compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 100
expression: "let x = <<1:8-size(5)>> x"
---
----- SOURCE CODE
let x = <<1:8-size(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:15
  │
1 │ let x = <<1:8-size(5)>> x
  │               ^^^^^^^ This is an extra size specifier

Hint: This segment already has a size.
See: https://tour.rakun.run/data-types/bit-arrays/
