compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_size2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:size(2)-size(8)>> -> 1 }"
---
----- SOURCE CODE
case <<1>> { <<1:size(2)-size(8)>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:26
  │
1 │ case <<1>> { <<1:size(2)-size(8)>> -> 1 }
  │                          ^^^^^^^ This is an extra size specifier

Hint: This segment already has a size.
See: https://tour.rakun.run/data-types/bit-arrays/
