compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_type_does_not_allow_size_utf32.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:utf32-size(5)>> -> 1 }"
---
----- SOURCE CODE
case <<1>> { <<1:utf32-size(5)>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:18
  │
1 │ case <<1>> { <<1:utf32-size(5)>> -> 1 }
  │                  ^^^^^ Size cannot be specified here

Hint: utf32 segments have an automatic size.
See: https://tour.rakun.run/data-types/bit-arrays/
